--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -36,3 +36,22 @@
     text-decoration: none;
     padding: 0.5rem 1rem;
 }
+
+.nav-links:hover {
+    background-color: #6d76f7;
+    border-radius: 4px;
+    transition: all 0.2s ease-out;
+
+}
+
+.fa-bars {
+    color: #fff;
+}
+
+.nav-links-mobile {
+    display: none;
+}
+
+.menu-icon {
+    display: none;
+}
