--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -6,6 +6,14 @@
     justify-content: center;
     align-items: center;
     font-size: 1.2rem;
+    
+}
+
+.btn {
+    color: white;
+    font-size: 15px;
+    font-weight: 300;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
 .navbar-logo {
